--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node -r dotenv/config app.js"
+    "start": "sails lift",
+    "devstart" : "node -r dotenv/config app.js"
   },
   "main": "app.js",
   "repository": {
@@ -43,5 +44,8 @@
   "license": "",
   "devDependencies": {
     "dotenv": "^2.0.0"
+  },
+  "engines" : {
+    "node" : "6.3.1"
   }
 }
